k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8schallenge
  namespace: k8s-challenge
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: k8schallenge
